Fix #popup-obfuscator not showing all the way down the page.

--- a/src/main/resources/wui/layout.css
+++ b/src/main/resources/wui/layout.css
@@ -177,7 +177,7 @@ input, button {
 
 #popup-obfuscator {
   background-color: transparent;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   height: 100%;
